--- a/dice-docker/dice-openresty/conf.d/prod.conf
+++ b/dice-docker/dice-openresty/conf.d/prod.conf
@@ -8,10 +8,10 @@
 proxy_cache_path /tmp levels=1:2 keys_zone=my_cache:1m max_size=1g inactive=600m use_temp_path=off;
 
 server {
-	    listen 443 ssl http2;
-        server_name bihell.com www.bihell.com;
-        ssl_certificate       /data/dice.crt;
-        ssl_certificate_key   /data/dice.key;
+	    listen 80;
+        server_name localhost;
+        #ssl_certificate       /data/dice.crt;
+        #ssl_certificate_key   /data/dice.key;
         # ssl_protocols         TLSv1.3;
         # ssl_ciphers           TLS13-AES-256-GCM-SHA384:TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-128-GCM-SHA256:TLS13-AES-128-CCM-8-SHA256:TLS13-AES-128-CCM-SHA256:EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
         charset utf-8;
@@ -64,14 +64,8 @@ server {
     }
 
 server {
-        listen 80;
-        server_name bihell.com www.bihell.com;
-        return 301 https://bihell.com$request_uri;
-    }
-
-server {
     listen 88;
-    server_name bihell.com www.bihell.com;
+    server_name localhost;
     location = /v1/api/one_auth/get_user_info {
         set $target_url '';
         add_header 'Access-Control-Allow-Origin' "$http_origin";
@@ -133,7 +127,7 @@ server {
 
 server {
         listen       3001;
-        server_name bihell.com www.bihell.com;
+        server_name localhost;
         charset utf-8;
 
         location / {
