--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       TZ: Asia/Shanghai
     ports:
-    - "80:80"
+    - "8081:80"
     volumes:
     - ~/.dice/logs/openresty:/usr/local/openresty/nginx/logs
     depends_on:
@@ -28,8 +28,8 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_ROOT_HOST: '%'
       TZ: Asia/Shanghai
-    expose:
-    - "3306"
+    ports:
+    - "3307:3306"
     volumes:
     - ~/.dice/mysql/mysql_data:/var/lib/mysql
     restart: always
